--- a/PaymentClient/src/app/components/payment-systems-list/payment-systems-list.component.html
+++ b/PaymentClient/src/app/components/payment-systems-list/payment-systems-list.component.html
@@ -23,16 +23,16 @@
       <div nz-col nzSpan="5" class="border-end">{{ system.name }}</div>
       <div nz-col nzSpan="5" class="border-end">{{ system.description }}</div>
       <div nz-col nzSpan="6" class="border-end">
-        <ng-container *ngFor="let curr of system.currency">
+        <ng-container *ngFor="let curr of system.currencies">
           {{ curr.name }}
         </ng-container>
       </div>
       <div nz-col nzSpan="6">
         <div>
-          <a nz-button nzType="primary" routerLink="/creation" class="m-1"
+          <a nz-button nzType="primary" routerLink="/creation/{{system.id}}" class="m-1"
             >Create payment</a
           >
-          <a nz-button nzType="primary" routerLink="/payments-list" class="m-1"
+          <a nz-button nzType="primary" routerLink="/payments-list/{{system.id}}" class="m-1"
             >List of payments</a
           >
           <button nz-button nzType="primary" nzDanger>Delete</button>
