added: payment creation

--- a/PaymentClient/src/app/components/payment-creation/payment-creation.component.css
+++ b/PaymentClient/src/app/components/payment-creation/payment-creation.component.css
@@ -2,3 +2,10 @@
     display: flex;
     justify-content: center;
 }
+
+.payment-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: fit-content;
+}
