--- a/PaymentClient/src/app/components/payment-systems-list/payment-systems-list.component.html
+++ b/PaymentClient/src/app/components/payment-systems-list/payment-systems-list.component.html
@@ -29,10 +29,18 @@
       </div>
       <div nz-col nzSpan="6">
         <div>
-          <a nz-button nzType="primary" routerLink="/creation/{{system.id}}" class="m-1"
+          <a
+            nz-button
+            nzType="primary"
+            routerLink="/creation/{{ system.id }}"
+            class="m-1"
             >Create payment</a
           >
-          <a nz-button nzType="primary" routerLink="/payments-list/{{system.id}}" class="m-1"
+          <a
+            nz-button
+            nzType="primary"
+            routerLink="/payments-list/{{ system.id }}"
+            class="m-1"
             >List of payments</a
           >
           <button nz-button nzType="primary" nzDanger>Delete</button>
