--- a/PaymentClient/src/app/components/payment-creation/payment-creation.component.html
+++ b/PaymentClient/src/app/components/payment-creation/payment-creation.component.html
@@ -1,11 +1,5 @@
 <form
-  class="border border-5 rounded m-5 p-2"
-  style="
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: fit-content;
-  "
+  class="border border-5 rounded m-5 p-2 payment-form"
   nz-form
   [formGroup]="paymentForm"
   (ngSubmit)="submitForm()"
@@ -17,7 +11,7 @@
       <nz-form-control nzErrorTip="Please input Payment Name!">
         <input
           id="paymentName"
-          formControlName="paymentName"
+          formControlName="name"
           nz-input
           placeholder="Payment Name"
         />
@@ -37,9 +31,9 @@
     </nz-form-item>
 
     <nz-form-item>
-      <nz-form-label [nzSpan]="10" nzRequired nzFor="sum">Sum</nz-form-label>
-      <nz-form-control nzErrorTip="Please input your Sum!">
-        <input id="sum" formControlName="sum" nz-input placeholder="Sum" />
+      <nz-form-label [nzSpan]="10" nzRequired nzFor="amount">Amount</nz-form-label>
+      <nz-form-control nzErrorTip="Please input your Amount!">
+        <input id="amount" formControlName="amount" nz-input placeholder="Amount" />
       </nz-form-control>
     </nz-form-item>
 
@@ -52,22 +46,12 @@
           nz-input
           nzPlaceHolder="Currency"
         >
-          <nz-option nzValue="USD" nzLabel="USD"></nz-option>
-          <nz-option nzValue="BYN" nzLabel="BYN"></nz-option>
+          <ng-container *ngFor="let currency of currencies">
+            <nz-option nzValue="{{currency.id}}" nzLabel="{{currency.name}}"></nz-option>
+          </ng-container> 
         </nz-select>
       </nz-form-control>
-    </nz-form-item>
-
-    <nz-form-item>
-      <nz-form-label [nzSpan]="10" nzRequired nzFor="state">State</nz-form-label>
-      <nz-form-control id="state" nzErrorTip="Please choose the State!">
-        <nz-select formControlName="state" nz-input nzPlaceHolder="State">
-          <nz-option nzValue="Active" nzLabel="Active"></nz-option>
-          <nz-option nzValue="In progress" nzLabel="In progress"></nz-option>
-          <nz-option nzValue="Finished" nzLabel="Finished"></nz-option>
-        </nz-select>
-      </nz-form-control>
-    </nz-form-item>
+    </nz-form-item> 
   </div>
 
   <nz-form-item>
